	  depending on this like "portage-2.1" (most users are not affected).
	  See the manpage and eix-sync -h for details. See the discussion in
	  http://bugs.gentoo.org/show_bug.cgi?id=202535
	- Allow "!!" lines in eix-sync to override environment variables like
	  FORCE_USECOLORS, see http://bugs.gentoo.org/show_bug.cgi?id=225963
	- Fix treatment of "-" in slotnames.
	  Thanks to Edward "Hades" <edward.hades at gmail.com> for the patch,
	  see http://bugs.gentoo.org/show_bug.cgi?id=225773
	- Fix PATH_MAX headers on FreeBSD-7. Thanks to
	  Javier Villavicencio <the_paya at gentoo.org> for the patch, see
	  http://bugs.gentoo.org/show_bug.cgi?id=226499
	- Fix recognition of system packages according to local settings.
	- Provide is now HashedWords. Thanks to
	  Charlie Shepherd <masterdriverz at gmail.com> for reporting.
	- Minor simplifications and compatibility fixes.
	- Finally updated AUTHORS and TODO (Sorry, I had forgotten about
	  these files for a long time) and reformatted ChangeLog.

*eix-0.12.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce DIFF_SEPARATE_DELETED and let it default to true.
	- Introduce DIFF_PRINT_HEADER.
	- Ignore leading + or - for /var/db/pkg/*/*/{,I}USE for paludis.
	  Do the same with IUSE data in packages for EAPI=1. Thanks for the
	  hint to Leonardo Valeri Manera <l.valerimanera at gmail.com>
	- Fix error handling in pushback_lines_file(), see
	  http://bugs.gentoo.org/show_bug.cgi?id=220119
	- Fix some bsd shell incompatibilities in scripts, see
	  http://bugs.gentoo.org/show_bug.cgi?id=220397
	- Introduce MAKE_GLOBALS default /usr/share/portage/config/make.globals
	  See http://bugs.gentoo.org/show_bug.cgi?id=221271
	- Reorganize eixrc/defaults.cc
	- Export PATH and other portagesettings variables to ebuild.sh, see
	  http://bugs.gentoo.org/show_bug.cgi?id=219066
	- Minor documentation fixes.

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Simplify pushback_lines_file()

*eix-0.12.4